--- a/default.project.json
+++ b/default.project.json
@@ -9,6 +9,12 @@
                 "$path": "src/ReplicatedStorage",
                 "Packages": {
                     "$path": "Packages"
+                },
+                "Controllers": {
+                    "$path": "src/ReplicatedStorage/Controllers",
+                    "InviteFriends": {
+                        "$path": "src/ReplicatedStorage/Controllers/InviteFriends"
+                    }
                 }
             }
         },
@@ -22,7 +28,11 @@
         "ServerStorage": {
             "$className": "ServerStorage",
             "Rojo": {
-                "$path": "src/ServerStorage"
+                "$path": "src/ServerStorage",
+                "Services": {
+                    "$path": "src/ServerStorage/Services"
+                }
+
             }
         },
         "StarterPlayer": {
