--- a/wally.toml
+++ b/wally.toml
@@ -5,5 +5,4 @@ registry = "https://github.com/UpliftGames/wally-index"
 realm = "shared"
 
 [dependencies]
-Knit = "sleitnick/knit@^1.6"
-Trove = "sleitnick/trove@1.1.0"
+knit = "sleitnick/knit@1.6.0"
